Opt 云笔记里部分挪进去

--- a/优化/图片优化的总结.md
+++ b/优化/图片优化的总结.md
@@ -1,19 +1,34 @@
 发现问题：
 移动端首页有一些图片加载很慢；
-首页加载调用12个接口，有的资源等待时间比较久；
+首页加载调用12个接口，有的资源等待时间比较久；浏览器最多同时处理6个任务，其他排在等待列表里
 首页要加载的图片数量多，体积大；
 
 
 调研方案：
 1 骨架屏；
 2 懒加载方案；
-3 减小图片体积：比如格式变为webp 用svg 等；
+3 减小图片体积：比如格式变为webp 用svg 等；ss雪碧图，把多个图片整合到一张，减少http请求；
 4 修改图片加载为渐进式加载，从清晰到模糊，先显示模糊图，后资源下载完成展示大图；从上到下加载；
+vue组件 vue-progressive-image 插件 但是要已有模糊图片！
+图片懒加载的意义：延迟加载图片资源，比如首屏图片，就先加载，其他图片当需要展示的时候，再去请求资源。避免一次性加载过多资源。
+5 渐渐加载，从上到下，从模糊到清晰 
+https://juejin.cn/post/6844903470944763917
+小程序实现图片模糊预加载教程：
+https://juejin.cn/post/6844904061825712142 react实现；
+Medium实现渐进式加载 https://juejin.cn/post/6844903442905825287 
 5 根据一些打包插件，压缩静态资源的体积；
 6 预加载一些资源
+<link rel="preload" href="./img/all.jpg" as="image" />
 
 最后实现：
 image-webpack-loader + url-loader 压缩静态资源中的图片体积
+合理加上图片懒加载 v-lazy
+减少打包后的体积：compression-webpack-plugin 把打包后的变成gzip
+提取公共模块不必重复打包：splitChunks+html-webpack-plugin
+
+url-loader:2.3.0    大于阈值的图片会被base64处理 
+image-webpack-plugin:7.0.0
+node:14.0.0
 
 ```
 const path = require('path')
