--- a/一些小问题/总结一下缓存.md
+++ b/一些小问题/总结一下缓存.md
@@ -16,5 +16,22 @@ Last-Modified: Sat, 04 Sep 2021 08:59:40 GMT!
 
 #### Nginx里关于缓存配置
 
+add_header Cache-Control no-cache：向浏览器发送了一个名为Cache-Control的头，其值为no-cache，这将告诉浏览器不要缓存响应。这通常用于GET请求，因为它们应该是无状态的
+
+proxy_cache_path /tmp/cache levels=1:2 keys_zone=my_cache:10m：配置了代理缓存。它指定缓存文件的存储路径（/tmp/cache），缓存级别（levels=1:2表示缓存1级和2级，即GET请求和POST请求），缓存键区域（keys_zone=my_cache:10m表示缓存键的内存大小为10MB）。
+
+proxy_set_header X-Forwarded-Proto https：向后端服务发送了一个名为X-Forwarded-Proto的头，其值为https，这将告诉后端服务请求是HTTPS协议。
+
+proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for：向后端服务发送了一个名为X-Forwarded-For的头，其值包含客户端的IP地址和代理服务器的IP地址。这可以帮助后端服务获取正确的客户端IP地址，从而进行IP地址限制或访问控制。
+
+proxy_cache zone_name|off 开启或关闭代理缓存，如果是开启则自定使用哪个缓存区来进行缓存
+
+proxy_cache_methods GET|HEAD|POST 缓存哪些HTTP方法
+
+proxy_cache_valid 200 304 10m：配置了缓存有效期。为200和304的响应URL设置10分钟缓存
+
+#### nginx配置缓存示例
+
 
 #### 前端代码配置
+
