--- a/一些小问题/总结一下缓存.md
+++ b/一些小问题/总结一下缓存.md
@@ -1,7 +1,9 @@
 #### Http缓存的基础知识
+直接从缓存中读取资源，而不需要向服务器发送请求
 强缓存：Expires
        Cache-Control: max-age=; s-max-age=; no-cache/no-store; public/provate
 
+先向服务器发送请求，服务器根据请求头中的信息判断资源是否可以缓存，并返回相应的状态码和响应头信息，以告诉浏览器是否可以使用缓存。如果文件没有发生变化，则返回304状态码
 协商缓存: Last-Modified ; if-modified-since; Etag; if-none-match
 
 #### 从打包结果看，不同资源应用什么样的缓存
@@ -31,7 +33,20 @@ proxy_cache_methods GET|HEAD|POST 缓存哪些HTTP方法
 proxy_cache_valid 200 304 10m：配置了缓存有效期。为200和304的响应URL设置10分钟缓存
 
 #### nginx配置缓存示例
+1 Nginx里配置index.html不缓存
+location / { 
+    if ($request_filename ~* .*.(?:htm|html)$) {
+        add_header Cache-Control "private, no-store, no-cache, must-revalidate, proxy-revalidate";
+    }
+}
+2 <script ?v= > 动态获取版本
+3 webpack打包时，时候加了hash
 
 
-#### 前端代码配置
+#### 前端代码和Nginx配置都能设置缓存相关的，优先级呢
+Nginx是发出的请求经过的第一层服务器，如果Nginx配置了缓存，那么请求会先经过Nginx，然后才到后端服务器。
+前端代码里配置了缓存，那么请求会先经过后端服务器，然后才到Nginx。
+如果想让前端配置的生效，在nginx里加上：
+proxy_hide_header Cache-Control;
+proxy_hide_header Expires;
 
