--- a/webpack5/性能优化.md
+++ b/webpack5/性能优化.md
@@ -69,3 +69,14 @@ components: {
 <script>
   import VueLazyload from 'vue-lazyload'
 ```
+
+### 怎么提升LCP指标
+1 提前加载较大资源
+2 减少线程阻塞：
+先加载关键资源 <link rel="preload" href="xxx.jpg"as="image" fetchpriority="high">
+延迟加载
+利用缓存
+加快传输速度
+
+
+
