OCT 大屏开发 组件网站

--- a/工具.md
+++ b/工具.md
@@ -1,14 +1,8 @@
-vscode：
-Noctis（换一个少女心主题）
-LeetCode
-前端每日一题
-Dot Log ：直接xxx.log
-Auto Close Tag
-
-开发相关：
-
-
 大厂算法题的网站 https://codetop.cc/home
 
 查看css兼容性：https://caniuse.com/
 一些教程：https://developer.mozilla.org/zh-CN/
+
+大屏开发：
+DataV:   http://datav.jiaminghi.com/guide/
+D3：https://observablehq.com/@d3/gallery
