--- a/优化/图片优化的总结.md
+++ b/优化/图片优化的总结.md
@@ -3,7 +3,6 @@
 首页加载调用12个接口，有的资源等待时间比较久；浏览器最多同时处理6个任务，其他排在等待列表里
 首页要加载的图片数量多，体积大；
 
-
 调研方案：
 1 骨架屏；
 2 懒加载方案；
@@ -19,6 +18,10 @@ Medium实现渐进式加载 https://juejin.cn/post/6844903442905825287
 5 根据一些打包插件，压缩静态资源的体积；
 6 预加载一些资源
 <link rel="preload" href="./img/all.jpg" as="image" />
+7 new Image() 和img.src的方式优于<img> 标签
+前者是在图片需要显示之间就开始加载，提前存进浏览器缓存里，且不会影响页面渲染顺序；
+后者是在页面渲染完成之后，才开始加载图片，影响页面渲染顺序；
+
 
 最后实现：
 image-webpack-loader + url-loader 压缩静态资源中的图片体积
