--- a/优化/性能优化相关 笔记.md
+++ b/优化/性能优化相关 笔记.md
@@ -135,3 +135,6 @@ devServer: {
       <!-- 还有数组和函数的形式设置多个headers -->
     }
 }
+上述两种配置方法，有什么区别？
+nginx设置的是服务器端缓存，能在现网生效；
+devServer配置的是客户端（浏览器）缓存，只能在开发环境；
