OCT 补充几个字

--- a/优化/图片优化的总结.md
+++ b/优化/图片优化的总结.md
@@ -5,7 +5,7 @@
 
 调研方案：
 1 骨架屏；
-2 懒加载方案；
+2 懒加载方案；<img loading="lazy">  js库：lozad.js
 3 减小图片体积：比如格式变为webp 用svg 等；ss雪碧图，把多个图片整合到一张，减少http请求；
 4 修改图片加载为渐进式加载，从清晰到模糊，先显示模糊图，后资源下载完成展示大图；从上到下加载；
 vue组件 vue-progressive-image 插件 但是要已有模糊图片！
@@ -15,12 +15,15 @@ https://juejin.cn/post/6844903470944763917
 小程序实现图片模糊预加载教程：
 https://juejin.cn/post/6844904061825712142 react实现；
 Medium实现渐进式加载 https://juejin.cn/post/6844903442905825287 
-5 根据一些打包插件，压缩静态资源的体积；
+5 根据一些打包插件，压缩静态资源的体积； image-webpack-loader vite-plugin-imagemin
 6 预加载一些资源
 <link rel="preload" href="./img/all.jpg" as="image" />
+对于关键图片可以优先加载 <img fetchpriority="high" src="./img/all.jpg" alt="">
 7 new Image() 和img.src的方式优于<img> 标签
 前者是在图片需要显示之间就开始加载，提前存进浏览器缓存里，且不会影响页面渲染顺序；
 后者是在页面渲染完成之后，才开始加载图片，影响页面渲染顺序；
+8 防止图片加载前和加载后位置偏移 影响CLS
+所以要在<img>设置长宽
 
 
 最后实现：
